--- a/Todo.txt
+++ b/Todo.txt
@@ -3,3 +3,6 @@
 - add users privileges upon account creation
 - single post screen gets messy if post is to short
 - upon user removal manuall from DB - there is problem with finding ID
+- logout bug
+- menu add sometimes freaks out
+- image link on post is gone sometimes
